# dynamic_avoider_final

./: .gitignore  README.md  frames_2026-03-13_11.12.18.gv  gazebo_standalone_test.sh  rviz_standalone_test.sh
src/dynamic_obstacle_pkg/: CMakeLists.txt  master_goal_node.cpp  package.xml  setup.py
src/dynamic_obstacle_pkg/config/: bridge_params.yaml  ekf.yaml  nav2_default_view.rviz  nav2_params.yaml
src/dynamic_obstacle_pkg/launch/: nav_launch.launch.py  navigation_launch.py  sim.launch.py  sim_launch.launch.py  total_system.launch.py
src/dynamic_obstacle_pkg/resource/: super_car.urdf
src/dynamic_obstacle_pkg/rviz/: dynamic_avoider.rviz  nav2_view.rviz
src/dynamic_obstacle_pkg/scripts/: mission_node.py  odom_tf_relay.py
src/dynamic_obstacle_pkg/src/: master_goal_node.cpp
src/dynamic_obstacle_pkg/urdf/: super_car.urdf  super_car.urdf.xacro
src/dynamic_obstacle_pkg/worlds/: dynamic_world.sdf  walk.dae  world.sdf
