<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamic_obstacle_pkg</name>
  <version>0.0.0</version>
  <description>Dynamic Obstacle Avoidance for Jazzy</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>turtlebot3_gazebo</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
